Fixing overflow/scrolling for larger pages.

--- a/web/sass/styles.sass
+++ b/web/sass/styles.sass
@@ -77,4 +77,8 @@ $text-strong: $grey-lighter
   bottom: 0
   width: 100%
   height: 100%
+  overflow: auto
   z-index: 2
+
+html
+  overflow: hidden
